# ImplicitCAD

./: .gitignore  .travis.yml  AltStatement.hs  Benchmark.hs  CHANGELOG.md  CONTRIBUTORS  Implicit.hs  Makefile  Makefile-NewCabal  Makefile-OldCabal  README.markdown  README.md  Release.md  Setup.hs  Tools.md  cabal.project  cabal.project.local.ci  ci.dhall  default.nix  docgen.hs  extopenscad.hs  hacking.md  implicit.cabal  implicitsnap.hs  overlay.nix  shell.nix  stack.yaml
.github/: FUNDING.yml
.github/workflows/: ci.dhall  ci.sh  ci.yaml  implicit.yaml  ormolu.yaml
Data/Vector/Unboxed/: V3.hs
Examples/: example1.scad  example10.escad  example11.hs  example12.hs  example13-e.escad  example13.hs  example14.escad  example15.scad  example16.hs  example17.hs  example18.escad  example19.escad  example2.escad  example20.escad  example21.scad  example22.escad  example23.escad  example24.escad  example25.escad  example3.escad  example4.escad  example5.escad  example6.escad  example7.escad  example8.escad  example9.escad  exampleMultmatrix.scad
Graphics/: Implicit.hs
Graphics/Implicit/: Canon.hs  Definitions.hs  Export.hs  ExtOpenScad.hs  FastIntUtil.hs  IntegralUtil.hs  Interface.hs  MathUtil.hs  ObjectUtil.hs  Operations.hs  Primitives.hs  Primitives.hs-boot  RationalFunctions.hs  RationalUtil.hs  SaneOperators.hs  Spec.hs  SymbolicManip.hs  Tracing.hs
Graphics/Implicit/Export/: BoxedObj2.hs  BoxedObj3.hs  Definitions.hs  DiscreteAproxable.hs  MarchingCubes.hs  MarchingSquares.hs  MarchingSquaresFill.hs  NormedTriangleMeshFormats.hs  OutputFormat.hs  PolylineFormats.hs  RayTrace.hs  Render.hs  Resolution.hs  SymbolicFormats.hs  SymbolicObj2.hs  SymbolicObj3.hs  TextBuilderUtils.hs  TriangleMeshFormats.hs  Util.hs
Graphics/Implicit/Export/Render/: Definitions.hs  GetLoops.hs  GetSegs.hs  HandlePolylines.hs  HandleSquares.hs  Interpolate.hs  RefineSegs.hs  TesselateLoops.hs
Graphics/Implicit/Export/Symbolic/: CoerceSymbolic2.hs  CoerceSymbolic3.hs  Rebound2.hs  Rebound3.hs
Graphics/Implicit/ExtOpenScad/: ArgParserUtil.hs  Default.hs  Default.hs~  Definitions.hs  Definitions.hs~  Expressions.hs  Expressions.hs~  Primitives.hs  Statements.hs  Statements.hs~  Util.hs
Graphics/Implicit/ExtOpenScad/Eval/: Constant.hs  Expr.hs  Statement.hs
Graphics/Implicit/ExtOpenScad/Parser/: AltExpr.hs  AltLexer.hs  AltStatement.hs  Expr.hs  Lexer.hs  Statement.hs  Util.hs
Graphics/Implicit/ExtOpenScad/Util/: ArgParser.hs  Computation.hs  OVal.hs  StateC.hs
Graphics/Implicit/ObjectUtil/: GetBox2.hs  GetBox3.hs  GetBoxShared.hs  GetImplicit2.hs  GetImplicit3.hs  GetImplicitShared.hs
Graphics/Implicit/Operations/: Box2.hs  Box3.hs  BoxPair.hs  BoxedObj2.hs  BoxedObj3.hs  BoxedObjPair.hs  Definitions.hs  Obj2.hs  Obj3.hs  ObjPair.hs  SymbolicObj2.hs  SymbolicObj3.hs  SymbolicObjPair.hs
Graphics/Implicit/Primitives/: BoxedObj2.hs  BoxedObj3.hs  Definitions.hs  Obj2.hs  Obj3.hs  SymbolicObj2.hs  SymbolicObj3.hs
Graphics/Implicit/Tracing/: GetTriangles.hs
Implicit/: Definitions.hs  Export.hs  ExtOpenScad.hs  MathUtil.hs  Operations.hs  Primitives.hs  SaneOperators.hs  Tracing.hs
Implicit/Tracing/: GetTriangles.hs
docs/: hacking.md
implicit-interpreter/: CHANGELOG.md  README.md  implicit-interpreter.cabal
implicit-interpreter/src/Graphics/Implicit/: Interpreter.hs
implicit-interpreter/test/: Spec.hs
layout/: ormolu.sh  ormolu.version  rebase-onto-formatter.sh
programs/: Benchmark.hs  ParserBench.hs  docgen.hs  extopenscad.hs  implicitsnap.hs  parser-bench.hs
tests/: GoldenTestSpec.hs  ImplicitSpec.hs  Main.hs  NOTES  PropertySpec.hs  RewriteSpec.hs  TesselationSpec.hs  VectorV3Spec.hs  outputfiletests.hs  tobacco_mesophyll_protoplast_fusion_device.escad
tests/ExecSpec/: Expr.hs  Util.hs
tests/GoldenSpec/: Spec.hs  Util.hs
tests/Graphics/Implicit/ExtOpenScad/Parser/: Statement.hs
tests/Graphics/Implicit/Test/: Instances.hs  Utils.hs
tests/MessageSpec/: Message.hs  Util.hs
tests/ParserSpec/: Expr.hs  Statement.hs  Util.hs
tests/PropertySpec/: Exec.hs
tests/WarnErrSpec/: Util.hs  WarnErr.hs
tests/golden/: arbitrary1.ascii.stl  arbitrary1.stl  arbitrary2.stl  arbitrary3.stl  arbitrary4.stl  boundingBoxes.ascii.stl  box.ascii.stl  box.stl  boxCylinder.ascii.stl  boxCylinder.scad  boxCylinder.stl  boxCylinder.three.js  boxFrame.ascii.stl  closing-paths-1.ascii.stl  closing-paths-2.ascii.stl  example13.stl  example16.stl  example17.stl  hook.stl  link.ascii.stl  pretty-printing.ascii.stl  pretty-printing.scad  pretty-printing.stl  pretty-printing.three.js
tests/imports/: child.scad  config.scad  neighbour.scad
tests/imports/relative/: parent.scad
tests/imports/relative/deep/: grandparent.scad
