Name:                implicit
Version:             0.2.1
Cabal-version:       >= 1.8
Tested-with:         GHC >= 8.2
Build-type:          Simple
Synopsis:            A Math-inspired programmatic 2&3D CAD system: CSG, bevels, and shells; gcode export..
Description:         A math-inspired programmatic CAD library in haskell.
                     Build objects with constructive solid geometry, bevels,
                     shells and more in 2D & 3D. Then export to SVGs, STLs,
                     or produce gcode directly!
License:             AGPL-3
License-file:        LICENSE
Author:              Julia Longtin <julial@turinglace.com>
Maintainer:          Julia Longtin <julial@turinglace.com>
Homepage:            http://implicitcad.org/
Category:            Graphics

Library

    Build-depends:
                  base >= 3 && < 5,
                  filepath,
                  directory,
                  parsec,
                  parallel,
                  containers,
                  deepseq,
                  hspec,
                  vector-space,
                  text,
                  monads-tf,
                  bytestring,
                  blaze-builder,
                  blaze-markup,
                  blaze-svg,
                  storable-endian,
                  JuicyPixels,
                  transformers

    Ghc-options:
                -O2
                -optc-O3
--                -dynamic
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for debugging.
                -Wall
                -Wextra
                -Weverything

    Exposed-modules:
                    Graphics.Implicit
                    Graphics.Implicit.Definitions
                    Graphics.Implicit.Primitives
                    Graphics.Implicit.Export
                    Graphics.Implicit.MathUtil
                    Graphics.Implicit.ExtOpenScad
                    Graphics.Implicit.ObjectUtil
                    -- These modules are exposed for the unit tests against the parser interface.
                    Graphics.Implicit.ExtOpenScad.Parser.Statement
                    Graphics.Implicit.ExtOpenScad.Parser.Expr
                    Graphics.Implicit.ExtOpenScad.Definitions
                    -- These are exposed for Benchmark.
                    Graphics.Implicit.Export.SymbolicObj2
                    Graphics.Implicit.Export.SymbolicObj3
                    -- These are exposed for implicitsnap.
                    Graphics.Implicit.Export.TriangleMeshFormats
                    Graphics.Implicit.Export.PolylineFormats
                    Graphics.Implicit.Export.DiscreteAproxable
                    -- These are exposed for docgen.
                    Graphics.Implicit.ExtOpenScad.Primitives            

    Other-modules:
                  Graphics.Implicit.FastIntUtil
                  Graphics.Implicit.IntegralUtil
                  Graphics.Implicit.ObjectUtil.GetBox2
                  Graphics.Implicit.ObjectUtil.GetBox3
                  Graphics.Implicit.ObjectUtil.GetImplicit2
                  Graphics.Implicit.ObjectUtil.GetImplicit3
                  Graphics.Implicit.ExtOpenScad.Default
                  Graphics.Implicit.ExtOpenScad.Parser.Util
                  Graphics.Implicit.ExtOpenScad.Eval.Statement
                  Graphics.Implicit.ExtOpenScad.Eval.Expr
                  Graphics.Implicit.ExtOpenScad.Util.ArgParser
                  Graphics.Implicit.ExtOpenScad.Util.OVal
                  Graphics.Implicit.ExtOpenScad.Util.StateC
                  Graphics.Implicit.Export.MarchingSquaresFill
                  Graphics.Implicit.Export.RayTrace
                  Graphics.Implicit.Export.NormedTriangleMeshFormats
                  Graphics.Implicit.Export.SymbolicFormats
                  Graphics.Implicit.Export.Util
                  Graphics.Implicit.Export.TextBuilderUtils
                  Graphics.Implicit.Export.Symbolic.Rebound2
                  Graphics.Implicit.Export.Symbolic.Rebound3
                  Graphics.Implicit.Export.Render
                  Graphics.Implicit.Export.Render.Definitions
                  Graphics.Implicit.Export.Render.GetLoops
                  Graphics.Implicit.Export.Render.GetSegs
                  Graphics.Implicit.Export.Render.HandleSquares
                  Graphics.Implicit.Export.Render.Interpolate
                  Graphics.Implicit.Export.Render.RefineSegs
                  Graphics.Implicit.Export.Render.TesselateLoops
                  Graphics.Implicit.Export.Render.HandlePolylines

Executable extopenscad
   Main-is: extopenscad.hs
   Hs-source-dirs: programs
   Build-depends:
                 base,
                 containers,
                 vector-space,
                 filepath,
                 parallel,
                 optparse-applicative >= 0.10.0,
                 implicit
   Ghc-options:
               -O2
               -optc-O3
               -threaded
               -rtsopts
--               -dynamic
               -- see GHC manual 8.2.1 section 6.5.1.
               -feager-blackholing
               -- for debugging.
               -Wall
               -Wextra
               -Weverything

Executable docgen
   main-is: docgen.hs
   Hs-source-dirs: programs
   build-depends:
                 base,
                 implicit
   ghc-options:
--               -dynamic
               -- for debugging.
               -Wall
               -Wextra
               -Weverything

Executable implicitsnap
   Main-is: implicitsnap.hs
   Hs-source-dirs: programs
   Build-depends:
                 base,
                 bytestring,
                 containers,
                 implicit,
                 parallel,
                 parsec,
                 silently,
                 snap-core,
                 snap-server,
                 text,
                 vector-space
   Ghc-options:
               -threaded
               -rtsopts
               -O2
               -optc-O3
               -dynamic
               -- see GHC manual 8.2.1 section 6.5.1.
               -feager-blackholing
               -- for debugging.
               -Wall
               -Wextra
               -Weverything

Executable Benchmark
   Main-is: Benchmark.hs
   Hs-source-dirs: programs
   Build-depends:
                 base,
                 criterion,
                 implicit
   Ghc-options:
               -O2
               -optc-O3
--               -dynamic
               -- for debugging.
               -Wall
               -Wextra
               -Weverything

Test-suite test-implicit
    Type: exitcode-stdio-1.0
    Build-depends:
                  base,
                  containers,
                  hspec,
                  implicit,
                  mtl,
                  parsec
    Main-is: Main.hs
    Hs-source-dirs: tests
    Ghc-options:
                -O2
                -optc-O3
--                -dynamic
                -- for debugging.
                -Wall
                -Wextra
                -Weverything
    Other-Modules:
                  ParserSpec.Expr
                  ParserSpec.Statement
                  ParserSpec.Util

Benchmark parser-bench
    Type: exitcode-stdio-1.0
    Build-depends: base, criterion, random, parsec, implicit
    Main-is: parser-bench.hs
    Hs-source-dirs: programs
    Ghc-options:
                -O2
                -optc-O3
--                -dynamic
                -- for debugging.
                -Wall
                -Wextra
                -Weverything

Source-repository head
    Type:            git
    Location:        https://github.com/colah/ImplicitCAD.git
